# Invoice_Data_Extractor

./: .gitignore  app.py  logger_file.py  output.txt  pyproject.toml  re_validation.ipynb  requirements.txt  utilis.py
